# tg_pokemon

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  conanfile.py
include/: battleHolder.h  box.h  global.h  moves.h  player.h  pokemon.h  wild.h
include/bot/: bot.h
include/bot/events/: events.h
include/database/: dbplayer.h  dbpokemon.h
include/pokemon/: battleHolder.h  box.h  global.h  moves.h  player.h  pokemon.h  wild.h
include/pokemon/battle/: baseBattle.h  battle.h  dualBattle.h  wildBattle.h
include/pokemon/bot/: bot.h
include/pokemon/bot/events/: battle.h  battleRequest.h  dualbattle.h  events.h  starters.h  wildbattle.h
include/pokemon/database/: conn.h  dbplayer.h  dbpokemon.h
include/pokemon/user/: player.h  wild.h
scripts/: build.sh
scripts/migrate/: .gitignore  dummy.go  go.mod  go.sum  test.py
scripts/migrate/cmd/: main.go
scripts/migrate/pkg/database/: functions.go
scripts/migrate/pkg/database/migrations/pokemon/: 06092020_0822_schemas.sql  10092020_0904_basestats.sql  10092020_0905_pokemon.sql  10092020_0907_userpokemon.sql  10092020_0911_team.sql  10092020_0916_player.sql  11092020_0209_move.sql  11092020_0818_iv_stats.sql  11092020_0821_ev_stats.sql  11092020_0823_box_pokemon_bridge.sql  11092020_0828_box_player_bridge.sql  11092020_0828_evolve_moveset.sql  11092020_0828_moveset.sql  11092020_0830_box.sql  11092020_0831_evolve_moveset_pokemon_bridge.sql  11092020_0831_moveset_pokemon_bridge.sql  11092020_0832_box_player_bridge.sql  11092020_0832_box_pokemon_bridge.sql  11092020_0834_moveset.sql  15092020_1203_player_move_bridge.sql  19092020_1857_pokemon_move_bridge.sql  19092020_2233_starters.sql  19092020_2234_route_pokemons.sql  testing.sql
scripts/migrate/pkg/helpers/: constants.go
scripts/migrate/pkg/helpers/initializer/: init.go
scripts/migrator/: app.py  requirments.txt
scripts/migrator/migrations/versions/: 5602f8e66ba9_initial_migration.py  fe3e8b971df7_second.py
src/: battleHolder.cpp  box.cpp  global.cpp  main.cpp  moves.cpp  player.cpp  player.h  pokemon.cpp  pokemon.h  wild.cpp
src/battle/: battle.cpp
src/battle/BaseBattle/: baseBattle.cpp  generators.cpp  handlers.cpp  stringGenerators.cpp
src/battle/DualBattle/: dualBattle.cpp  handlers.cpp  stringGenerators.cpp
src/battle/WildBattle/: handlers.cpp  stringGenerators.cpp  wildBattle.cpp
src/bot/: bot.cpp  poll.cpp
src/bot/events/: battle.cpp  dualbattle.cpp  events.cpp  starters.cpp  wildbattle.cpp
src/database/: conn.cpp  dbplayer.cpp  dbpokemon.cpp  moves.cpp  player.cpp  pokemon.cpp  starters.cpp  utils.cpp
src/user/: player.cpp  wild.cpp
